--- a/assets/css/paper-dashboard.css
+++ b/assets/css/paper-dashboard.css
@@ -3647,7 +3647,8 @@ License - nucleoapp.com/license/
     .card .card-header:not([data-background-color]) {
       background-color: transparent; }
     .card .card-header .card-title {
-      margin-top: 10px; }
+      margin-top: 0px;
+      margin-bottom: 0; }
   .card .map {
     border-radius: 3px; }
     .card .map.map-big {
@@ -3720,7 +3721,7 @@ License - nucleoapp.com/license/
     padding-right: 0; }
 
 .card-chart .card-header .card-title {
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 0; }
 
 .card-chart .card-header .card-category {
